--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,235 +1,84 @@
 {
-	"menus.headermenu":" Menus ",
-	"menus.mnuid":" ID ",
-	"menus.headertext":"Name",
-	"menus.c_object":"Procedure",
-	"menus.containermenu":"Container Menu",
-	"menus.ischild":"Is Child",
-	"menus.isparent":"Is Parent",
-	"menus.level":"Level",
-	"menus.menuicon":"Icon",
-	"menus.mtype":"Menu Type",
-	"menus.shortcut":"Shortcut",
-	"menus.visible":"Visibility",
-	"menus.panels":"Panels Data",
-	"menus.privileges":"Privileges Data",
-	"files.selecticon":" Select Icon 24 Pixel ",
-	"files.selectimage":" Select Image",
-	"roles.settings":" Roles Settings " ,
-	"roles.permissionmenus":"Permissions settings for menus" ,
-	"roles.name":" Role Name " ,
-	"roles.selectall":"Un/Select All",
-	"roles.all":"All Items",
-	"roles.noone":"No Item",
-	"roles.someone":"Some Items",
-	"roles.selectitems":"Select basic elements",
-	"roles.setOptionSelectAll":"Select All For All Items",
-	"roles.setOptionNoSelect":"No Select For All Items",
-	"privileges.dataprivilege" : "Data Privilege",
-	"privileges.addprivilege" : "Add Privilege",
-	"privileges.base_item_id" : "Permission Or Privilege",
-	"panels.datapanel" : "Data Panel",
-	"panels.addpanel" : "Add Panel",
-	"panels.mid":"Menu Binding",
-	"panels.ptype":"Panel Type",
-	"panels.des":"Panel Des",
-	"columns.datacolumn":"Data Column",
-	"columns.addcolumn":"Add Column",
-	"events.eventdata":"Event Data",
-	"events.addevent":"Add Event",
-	"baseitem.baseitems":"Data of main items",
-	"baseitem.baseitemdata":"Data Base Item",
-	"baseitem.has_info":"Has Information",
-	"baseitem.has_financial":"Has Financial",
-	"baseitem.has_document":"Has Document",
-	"baseitem.has_production":"Has Production",
-	"baseitem.has_device":"Has Device",
-	"baseitem.has_pointsale":"Has Point Of Sale",
-	"baseitem.data_info":"Basic Data",
-	"baseitem.data_financial":"Financial Data",
-	"baseitem.data_document":"Document Data",
-	"baseitem.data_production":"Production Data",
-	"baseitem.data_device":"Device Data",
-	"baseitem.data_device_name":"Device Name",
-	"baseitem.data_device_type":"Device Type",
-	"baseitem.data_device_ipaddress":"Ip Address",
-	"baseitem.data_device_macaddress":"Mac Address",
-	"baseitem.data_device_portnumber":"Port Number",
-	"baseitem.data_pointsale":"Point Of Sale Data",
-	"baseitem.data_pointsalename":"Point Name",
-	"baseitem.data_pointsaletype":"Point Type",
-	"baseitem.data_pointsalestore":"Store",
-	"baseitem.data_pointsalecashier":"Cashier",
-	"baseitem.data_pointsalebrunch":"Branch",
-	"baseitem.secondname":"Last Name",
-	"baseitem.email":"Email",
-	"baseitem.address":"Address",
-	"baseitem.city":"City",
-	"baseitem.country":"Country",
-	"baseitem.postalcode":"Postal Code",
-	"baseitem.phone":"Phone",
-	"baseitem.mobil":"Mobil",
-	"baseitem.fax":"Fax",
-	"baseitem.comments":"Comments",
-	"baseitem.notes":"Notes",
-	"baseitem.image":"Image",
-	"baseitem.trademark":"Trade mark",
-	"baseitem.store_account_balance":"Store Account Balance",
-	"baseitem.account":"Account",
-	"baseitem.taxable":"Taxable",
-	"baseitem.tax_percent":"Tax Percent",
-	"baseitem.documentname":"Document Name",
-	"baseitem.store_effect":"Store Effect",
-	"baseitem.account_effect":"Account Effect",
-	"baseitem.has_base_item_first":"Has Item First",
-	"baseitem.base_item_type_first":"Item Type First",
-	"baseitem.has_base_item_second":"Has Item Second",
-	"baseitem.base_item_type_second":"Item Type Second",
-	"baseitem.appear_stock":"Appear Stock",
-	"baseitem.out_no_stock":"Out No Stock",
-	"baseitem.default_in_price":"Default In Price",
-	"baseitem.default_out_price":"Default Out Price",
-	"baseitem.nickname":"Nick Name",
-	"baseitem.barcode":"Barcode",
-	"baseitem.orderlimit":"Order Limit",
-	"baseitem.category_id":"Category",
-	"baseitem.group_id":"Group",
-	"baseitem.whole_id":"Whole Unit",
-	"baseitem.segment_id":"Segment Unit",
-	"baseitem.factor":"Conversion Factor",
-	"baseitem.pricebuy":"Price Buy",
-	"baseitem.pricesell":"Price Sell",
-	"baseitem.stockcost":"Stock Cost",
-	"baseitem.stockvolume":"Stock Volume",
-	"baseitem.website":"Web Site",
-	"baseitem.language":"Language",
-	"company.datainfo":"The basic data of the facility",
-	"move.id":"Order ID",
-	"move.from_store":"From stored",
-	"move.to_store":"To stored",
-	"move.supplier":"From Supplier",
-	"move.customer":"To Customer",
-	"move.store_keeper":"Store Keeper",
-	"move.order_supply_number":"Order Supply Number",
-	"move.transporter_name":"Transporter Name",
-	"move.vehicle_number":"Vehicle Number",
-	"move.driver_name":"Driver Name",
-	"move.order_work_number":"Order Work Number",
-	"move.order_date":"Order Date",
-	"move.order_time_in":"Arrival time",
-	"move.order_time_out":"Time to leave",
-	"move.product_id":"Item",
-	"move.productpackage":"Packages",
-	"move.whole_id":"Unit",
-	"move.factor":"Count",
-	"move.segement_id":"Box",
-	"move.quantityheader":"Quantity",
-	"move.quantity":"Unit",
-	"move.quantity_s":"Box",
-	"move.price_buyheader":"Price Buy",
-	"move.price_buy":"Unit",
-	"move.price_buy_s":"Box",
-	"move.total_buy":"Total buy",
-	"move.price_sellheader":"Price Sell",
-	"move.price_sell":"unit",
-	"move.price_sell_s":"box",
-	"move.notes":"Notes",
-	"app.tools":"",
-	"menu.users":"Users",
-	"login.user":"User Name",
-	"login.pwd":"Password",
-	"login.signin":"Login",
-	"search.placeholder":"Search",
+	"app.title":"DEAL",
+
+	"_comment": "Translate Languages",
 	"lang.english":"English",
 	"lang.arabic":"Arabic",
-	"vaild.required":" required " ,
-	"vaild.pattern":" Invaild Pattern " ,
-	"app.title":"Alf Accounting",
-	"app.index" : "C",
-	"app.savesuccess":" Changes has been saved successfully ",
-	"app.savewrong":" Check connection , data not saved correctly",
-	"app.nochanges":" No has changes ",
-	"app.limit64kimage":"Choose image size less than 64 kb",
-	"app.dimentions16by16":" Maximum dimentions allowed 16*16 px ",
-	"app.dimentions32by32":" Maximum dimentions allowed 32*32 px ",
-	"app.dimentions128by128":" Maximum dimentions allowed 128*128 px ",
-	"app.ok" : "Ok",
-	"app.cancel" :"Cancel",
-	"app.titledel":" Delete ",
-	"app.titlesavechanges":" Save Changes ",
-	"app.msgsavechanges":"Do you want to save chanes ?",
-	"app.yes":" Yes ",
-	"app.no":" No ",
-	"app.validate":"Validate",
-	"app.msgdel":"Do you want to delete this data ?",
-	"app.msgconfirm":" Please , Confrim ",
-	"app.name":"Name",
-	"app.text":"Text",
-	"app.cid":"Code",
-	"app.mdisplay":"Display member",
-	"app.mvalue":"Value member",
-	"app.mselector":"Selector Value",
-	"app.mcols":"Columns",
-	"app.ctype":"Control Type",
-	"app.visible":"Visible",
-	"app.lock":"Lock",
-	"app.type":"Type",
-	"app.content":"Content",
-	"app.showpassword":"Show Password",
-	"app.none":"No Value",
-	"app.fromdate":"Start Date",
-	"app.todate":"End Date",
-	"app.fromdatetimeentry":"Start Time Entry",
-	"app.todatetimeentry":"End Time Entry",
-	"app.fromdatetimeout":"Start Time Leave",
-	"app.todatetimeout":"End Time Leave",
-	"app.nouserregister":"No User Logged In",
-	"app.welcomeuser":"  Welcome Dear  ",
-	"app.righttoleft":"Right To Left",
-	"app.lefttoright":"Left To Right",
-	"app.actionnotallow" : " not allowed banned ",
-	"app.actionnotcomplete":" an error occurred while processing your request check connection  ",
-	"app.loadingdata":" Loading Data  ",
-	"app.successloadingdata" :  "  Success Loading Data" ,
-	"app.login" :"  Login " ,
-	"app.success":" Success " ,
-	"app.saving":"   Saving " ,
-	"app.deleting":"   Deleting " ,
-	"app.duplicate":"   Duplicate ",
-	"app.actionsdata":" Actions Data ",
-	"app.importdata":" Import Data ",
-	"app.exportdate":" Export Data ",
-	"app.importbutton":" Import ",
-	"app.exportbutton":" Export ",
-	"app.noItems" : " No Results ",
-	"button.new":"New",
-	"button.undo":"Undo",
-	"button.update":"Update",
-	"button.del":"Delete",
-	"button.save":"Save",
-	"button.duplication":"Duplicate",
-	"toasts.message":"Message",
-	"pos.units":" Unit ",
-	"pos.priceperunit":" \\ Unit ",
-	"pos.checkout" : "Check out",
-	"pos.des" : "Item Des",
-	"pos.quan" : "Qty",
-	"pos.price" : "Price",
-	"pos.amount" : "Amount",
-    "pos.total" : "Total",
-	"pos.tax" : "Taxes",
-	"pos.discount" : "Discount",
-	"pos.netdue" : "Net Due",
-	"pos.paid" : "Paid",
-	"pos.remainder" : "Remainder",
-	"company.logo" : "Logo Image",
-	"company.watermark" : "Watermark Image",
-	"register.password" : "Password",
-	"register.retype-password" : "Retype Password",
-	"register.roles" : "Set Roles",
-	"language.languages" : "Languages",
-	"language.name" : "Language Name",
-	"language.shortcut" : "Shortcut",
-	"language.translatekey" : "Translate Key",
-	"language.direction" : "Direction"
+
+	"_comment": "  Get Start ",
+	"start.welcome":" welcome ",
+	"start.login":"  Login ",
+	"start.accountregister":" Create New Account ",
+	"start.or":" OR ",
+	"start.hasaccount":"Already has account ?",
+
+	"_comment":" Account Registration Screen  ",
+	"register.registeraccount":" Account Registration ",
+	"register.accounttype":"Account type",
+	"user":"User",
+	"market":"Market",
+	"medicine":"Medicine",
+	"restaurant":"Restaurant",
+	"register.accountname":"Account name",
+	"register.enteraccountname":"Enter an account name",
+	"register.accountnamereq":"Account name is required",
+	"register.login":"Login Name",
+	"register.placeholderlogin":"Enter an email address or phone number",
+	"register.loginreq":"Login name is required",
+	"register.loginreqpattern":"Invalid email address or mobil number ",
+	"register.loginduplicate":"Login name already exists",
+	"register.firstname":"First name",
+	"register.enterfirstname":" Enter your first name ",
+	"register.firstnamereq":"First name is required ",
+	"register.lastname":"Last name ",
+	"register.enterlastname":" Enter your last name ",
+	"register.lastnamereq":" Last name is required ",
+	"register.email":" Email address ",
+	"register.enteremail":"Enter an email address",
+	"register.emailpattern":" Invalid email address",
+	"register.languagereq":"Must be select language",
+	"register.selectlanguage":" Select language",
+	"register.enterpassword":" Enter a password ",
+	"register.password":"Password",
+	"register.passwordreq":" Password is required ",
+	"login.rememberme":" Remember me",
+	"login.forgetpassword":"Forget password",
+	"login.submit":"Login",
+	"forgot.loginnotfound":" Login name does not exist, please check it",
+	"forgot.createnewpassword":" Create new password " ,
+	"forgot.note":" Please provide an email address or phone number that you used when you signed up for your Evernote account.",
+	"otp.otpnumber":" OTP Number ",
+	"otp.enterotpnumber":" Enter 6 digit",
+	"otp.verfiy":" OTP verify  ",
+	"newpassword.password":"New password",
+	"newpassword.retypepassword":" Retype new password  ",
+	"newpassword.enterpassword":"Type 6 characters at least and a maximum of 20 characters",
+	"newpassword.required":" Password required",
+	"newpassword.min":"Must type 6 characters at least",
+	"newpassword.max":"Must type a maximum of 20 characters",
+	"newpassword.notmatch":"The two passwords do not match",
+	"newpassword.createnewpassword":"Create new password",
+    
+	"_comment":" Product screen ",
+	"product.name":" Product name",
+	"product.placeholername":" Enter product name",
+	"product.nameduplicate":"Product name is duplicate",
+	"product.namereq":" Product name is required",
+	"product.descr":" product description ",
+	"product.firstunit":" First unit",
+	"product.firstunitname":"First unit name ",
+	"product.firstprice":" First price",
+	"product.secondunit":"Second unit",
+	"product.secondunitname":"Second unit name",
+	"product.secondprice":"Second price",
+	"product.image":"Product image",
+	"product.category":" Category",
+	"product.registerproduct":" Create Product ",
+
+	"_comment":" Category screen ",
+	"category.placeholername":" Enter category name",
+	"category.descr":" Category description ",
+	"category.image":"Category image",
+	"category.account_type":" Account Type"
+
 }
