--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,237 +1,85 @@
 {
-	"menus.headermenu":"القوائم ",
-	"menus.mnuid":"كود ",
-	"menus.headertext":"الأسم",
-	"menus.c_object":"الإجراء",
-	"menus.containermenu":"القائمة الحاويه",
-	"menus.ischild":" هل إبن ",
-	"menus.isparent":" هل أب ",
-	"menus.level":"المستوى",
-	"menus.menuicon":"الأيكون",
-	"menus.mtype":"النوع",
-	"menus.shortcut":"المختصرة",
-	"menus.visible":"مرئية",
-	"menus.panels":"بيانات اللوحات",
-	"menus.privileges":" بيانات التصريحات و الإمتيازات",
-	"files.selecticon":"إختيارالأيكون pixel 24",
-	"files.selectimage":"إختيارالصورة",
-	"roles.settings":" إعدادات الأدوار " ,
-	"roles.permissionmenus":" إعدادات الصلاحيات للقوائم " ,
-	"roles.name":" إسم الدور " ,
-	"roles.selectall":"[غير/ محدد الكل]",
-	"roles.setOptionSelectAll":"إختيار الكل للعناصر",
-	"roles.setOptionNoSelect":" لا إختيار",
-	"roles.all":"كل العناصر",
-	"roles.noone":"ولا عنصر",
-	"roles.someone":"بعض العناصر",
-	"roles.selectitems":"تحديد العناصر الأساسية",
-	"privileges.dataprivilege" : "بيانات التصريحات و الإمتيازات",
-	"privileges.addprivilege" : "إضافة تصريح أو إمتياز",
-	"privileges.base_item_id" : "التصريح أو الإمتياز",
-	"panels.datapanel" : "بيانات اللوحه",
-	"panels.addpanel" : "إضافة لوحه",
-	"panels.mid":"قائمة الربط",
-	"panels.ptype":"النوع",
-	"panels.des":"الوصف",
-	"columns.datacolumn":"بيانات العمود",
-	"columns.addcolumn":" إضافة عمود ",
-	"events.eventdata":"بيانات الحدث",
-	"events.addevent":" إضافة حدث",
-	"baseitem.baseitems":"بيانات العناصر الأساسيه ",
-	"baseitem.baseitemdata":"بيانات العنصر الأساسى ",
-	"baseitem.has_info":"يمتلك معلومات",
-	"baseitem.has_financial":"يمتلك حساب",
-	"baseitem.has_document":"يمتلك مستند",
-	"baseitem.has_production":"يمتلك إنتاج",
-	"baseitem.has_device":" يمتلك جهاز",
-	"baseitem.has_pointsale":" يمتلك نقطه بيع",
-	"baseitem.data_info":"بيانات أساسية",
-	"baseitem.data_financial":"بيانات مالية",
-	"baseitem.data_document":"بيانات مستندية",
-	"baseitem.data_production":"بيانات إنتاجية",
-	"baseitem.data_device":"بيانات الجهاز",
-	"baseitem.data_device_name":"إسم الجهاز",
-	"baseitem.data_device_type":"نوع الجهاز",
-	"baseitem.data_device_ipaddress":"عنوان شبكى",
-	"baseitem.data_device_macaddress":"عنوان فيزيائى",
-	"baseitem.data_device_portnumber":"رقم المنفذ",
-	"baseitem.data_pointsale":"بيانات نقطة البيع",
-	"baseitem.data_pointsalename":"إسم النقطه",
-	"baseitem.data_pointsaletype":"نوع النقطة",
-	"baseitem.data_pointsalestore":"المخزن",
-	"baseitem.data_pointsalecashier":"الخزينه",
-	"baseitem.data_pointsalebrunch":"الفرع",
-	"baseitem.secondname":"الإسم الأخير",
-	"baseitem.email":"البريد اليكترونى",
-	"baseitem.address":"العنوان",
-	"baseitem.city":"المدينة",
-	"baseitem.country":"البلد",
-	"baseitem.postalcode":"الرمز البريدى",
-	"baseitem.phone":"التليفون",
-	"baseitem.mobil":"الموبايل",
-	"baseitem.fax":"الفاكس",
-	"baseitem.comments":"التعلقات",
-	"baseitem.notes":"الملاحظات",
-	"baseitem.image":"الصورة",
-	"baseitem.trademark":"العلامة التجارية",
-	"baseitem.store_account_balance":" رصيد حساب المتجرة",
-	"baseitem.account":"رقم الحساب",
-	"baseitem.taxable":"خاضع للضريبة",
-	"baseitem.tax_percent":"نسبة الضريبة",
-	"baseitem.documentname":"إسم المستند",
-	"baseitem.store_effect":"تأثير مخزنى",
-	"baseitem.account_effect":" تأثير حساب",
-	"baseitem.has_base_item_first":"يوجد عنصر أول",
-	"baseitem.base_item_type_first":"نوع عنصر أول",
-	"baseitem.has_base_item_second":"يوجد عنصر ثانى",
-	"baseitem.base_item_type_second":"نوع عنصر ثانى",
-	"baseitem.appear_stock":"إظهار الرصيد",
-	"baseitem.out_no_stock":"صرف بدون رصيد",
-	"baseitem.default_in_price":"إفتراضى سعر الشراء",
-	"baseitem.default_out_price":"إفتراضى سعر البيع",
-	"baseitem.nickname":"إسم مختصر",
-	"baseitem.barcode":"الباركود",
-	"baseitem.orderlimit":"حد الطلب",
-	"baseitem.category_id":"الفئة",
-	"baseitem.group_id":"المجموعة",
-	"baseitem.whole_id":"الوحدةالكاملة",
-	"baseitem.segment_id":"الوحدةالجزئية",
-	"baseitem.factor":"معامل التحويل",
-	"baseitem.pricebuy":"سعر الشراء",
-	"baseitem.pricesell":"سعر البيع",
-	"baseitem.stockcost":"تكلفة المخزون",
-	"baseitem.stockvolume":"حجم المخزون",
-	"baseitem.website":"الموقع الألكترونى",
-	"baseitem.language":"اللغة",
-	"company.datainfo":"البيانات الأساسية للمنشأة",
-	"move.id":"رقم الأذن",
-	"move.from_store":"من مخزن",
-	"move.to_store":"إلى مخزن",
-	"move.supplier":"من مورد",
-	"move.customer":"إلى عميل",
-	"move.store_keeper":"أمين مخزن",
-	"move.order_supply_number":"رقم أمرالتوريد",
-	"move.transporter_name":"مقاول نقل",
-	"move.vehicle_number":"رقم سيارة",
-	"move.driver_name":"إسم السائق",
-	"move.order_work_number":"رقم أمر التشغيل",
-	"move.order_date":"التاريخ",
-	"move.order_time_in":"وقت الوصول",
-	"move.order_time_out":"وقت الأنصراف",
-	"move.product_id":"الصنف",
-	"move.productpackage":"العبوات",
-	"move.whole_id":"الوحدة",
-	"move.factor":"العدد",
-	"move.segement_id":"العبوة",
-	"move.quantityheader":"الكمية",
-	"move.quantity":"الوحدة",
-	"move.quantity_s":"العبوة",
-	"move.price_buyheader":"سعر الشراء",
-	"move.price_buy":"الوحدة",
-	"move.price_buy_s":"العبوة",
-	"move.total_buy":"إجمالى الشراء",
-	"move.price_sellheader":"سعر البيع",
-	"move.price_sell":"الوحدة",
-	"move.price_sell_s":"العبوة",
-	"move.notes":"ملاحظات",
-	"app.tools":"",
-	"menu.users":"المستخدمين",
-	"login.user":"إسم المستخدم",
-	"login.pwd":"كلمة المرور",
-	"login.signin":"تسجيل الدخول",
-	"search.placeholder":"بحث",
+	"app.title":" صفقه ",
+
+	"_comment":" ترجمه اللغات ",
 	"lang.english":"إنجليزى",
 	"lang.arabic":"عربى",
-	"vaild.required":" مطلوب " ,
-	"vaild.pattern":" التنسيق غير مطابق " ,
-	"app.title":" آلفؤاد للمحاسبة ",
-	"app.index" : "م",
-	"app.savesuccess":" تم حفظ التغيرات بنجاح",
-	"app.savewrong":" تأكد من الأتصال > لم يتم حفظ البيانات بشكل صحيح",
-	"app.nochanges":" لا يوجد تغييرات ",
-	"app.limit64kimage":" إختيار صورة أقل من 64 كيلو بايت",
-	"app.dimentions128by128":" أقصى أبعاد يسمح بها 128 * 128 بيكسل ",
-	"app.dimentions16by16":" أقصى أبعاد يسمح بها 16 * 16 بيكسل ",
-	"app.dimentions32by32":" أقصى أبعاد يسمح بها 32 * 32 بيكسل ",
-	"app.ok" : "تأكيد",
-	"app.cancel" :"إلغاء",
-	"app.validate":"التحقق",
-	"app.titledel":" حذف ",
-	"app.titlesavechanges":" حفظ التغيرات ",
-	"app.msgsavechanges":" هل تريد بالفعل حفظ التغيرات ؟",
-	"app.yes":" نعم ",
-	"app.no":" لا ",
-	"app.msgdel":"  هل تريد بالفعل حذف البيانات ؟",
-	"app.msgconfirm":" رجاء التأكيد أو الإلغاء",
-	"app.name":"الأسم",
-	"app.text":"العنوان",
-	"app.cid":"كود",
-	"app.mdisplay":"عضو العرض",
-	"app.mvalue":"عضو القيمة",
-	"app.mselector":"قيمة المحدد",
-	"app.mcols":"الأعمدة",
-	"app.ctype":"نوع الاداة",
-	"app.visible":"مرئى",
-	"app.lock":"مغلق",
-	"app.type":"النوع",
-	"app.content":"المحتوى",
-	"app.showpassword":"عرض كلمة المرور",
-	"app.none":"بدون قيمة",
-	"app.fromdate":"من تاريخ",
-	"app.todate":"إلى تاريخ",
-	"app.fromdatetimeentry":" من وقت دخول",
-	"app.todatetimeentry":"إلى وقت دخول",
-	"app.fromdatetimeout":"من وقت خروج",
-	"app.todatetimeout":"إلى وقت خروج",
-	"app.nouserregister":"لا يوجد مستخدم حالى",
-	"app.welcomeuser":" مرحباً بك عزيزى ",
-	"app.righttoleft":"من اليمين إلى اليسار",
-	"app.lefttoright":"من اليسار إلى اليمين",
-	"app.actionnotallow" : " الإجراء محظور ",
-	"app.actionnotcomplete":" حدث خطأ أثناء معالجة طلبك تأكد من الأتصال  ",
-	"app.loadingdata":" تحميل البيانات ... ",
-	"app.successloadingdata" :  " تم بنجاح تحميل البيانات ..." ,
-	"app.login" :"  تسجيل الدخول ... " ,
-	"app.success":"  تم بنجاح ... ! " ,
-	"app.saving":"   حفظ ... ! " ,
-	"app.deleting":"  حذف ... ! " ,
-	"app.duplicate":"تكرار ... !",
-	"app.actionsdata":"إجراءات البيانات",
-	"app.importdata":" إستيراد البيانات ",
-	"app.exportdate":" تصدير البيانات ",
-	"app.importbutton":" إستيراد ",
-	"app.exportbutton":" تصدير ",
-	"app.noItems" : " لاتوجد نتائج ",
-	"button.new":"جديد",
-	"button.undo":"تراجع",
-	"button.update":"تعديل",
-	"button.del":"حذف",
-	"button.save":"حفظ",
-	"button.duplication":"تكرار",
-	"toasts.message":"رساله",
-	"pos.units":" وحدة ",
-	"pos.priceperunit":" / وحدة ",
-	"pos.checkout" : " الدفع ",
-	"pos.des" : " وصف الصنف",
-	"pos.quan" : "الكميه",
-	"pos.price" : "السعر",
-	"pos.amount" : "القيمه",
-    "pos.total" : "إجمالى",
-	"pos.tax" : "ضريبه",
-	"pos.discount" : "خصم",
-	"pos.paid" : "المدفوع",
-	"pos.remainder" : "الباقى",
-	"pos.netdue" : "الصافى",
-	"company.logo" : "صورة الشعار",
-	"company.watermark" : "صورة العلامة المائية",
-	"register.password" : "كلمة المرور",
-	"register.retype-password" : "إعادة كلمة المرور",
-	"register.roles" : " تعيين الأدوار",
-	"language.languages" : "اللغـــات",
-	"language.name" : " اللغة",
-	"language.shortcut" : "أحرف الإختصار",
-	"language.translatekey" : "مفتاح الترجمه",
-	"language.direction" : "إتجاه النص"
 
-	
+	"_comment": "  بدء العمل ",
+	"start.welcome":" مرحباً بك ",
+	"start.login":" تسجيل الدخول ",
+	"start.accountregister":" إنشاء حساب جديد ",
+	"start.or":" أو ",
+	"start.hasaccount":"بالفعل يوجد حساب ؟",
+
+	"_comment":"  شاشة تسجيل الحساب و تسجيل الدخول و نسيت كلمة المرور و كلمة المرور لمرة واحدة",
+	"register.registeraccount":"تسجيل الحساب",
+	"register.accounttype":"نوع الحساب",
+	"user":"مستخدم",
+	"market":"ماركت",
+	"medicine":"صيدليه",
+	"restaurant":"مطعم",
+	"register.accountname":"إسم الحساب",
+	"register.enteraccountname":"إدخل إسم الحساب",
+	"register.accountnamereq":"إسم الحساب مطلوب",
+	"register.login":"إسم تسجيل الدخول",
+	"register.placeholderlogin":"يمكنك إدخال بريد إليكترونى أو رقم هاتف",
+	"register.loginreq":"إسم تسجيل الدخول مطلوب",
+	"register.loginreqpattern":"بريد اليكترونى أو رقم هاتف غير صالح ",
+	"register.loginduplicate":"إسم تسجيل الدخول موجود بالفعل",
+	"register.firstname":"الإسم الأول",
+	"register.enterfirstname":" إدخل الإسم الأول",
+	"register.firstnamereq":" الإسم الأول مطلوب",
+	"register.lastname":" الإسم الأخير ",
+	"register.enterlastname":" إدخل الإسم الأخير ",
+	"register.lastnamereq":" الإسم الأخير مطلوب ",
+	"register.email":" البريد الإلكترونى ",
+	"register.enteremail":"  إدخل البريد الإلكترونى ",
+	"register.emailpattern":" البريد الإلكترونى غير صحيح",
+	"register.languagereq":"يجب تحديد اللغة",
+	"register.selectlanguage":"إخنيار اللغة",
+	"register.enterpassword":" إدخل كلمة المرور",
+	"register.password":"كلمة المرور",
+	"register.passwordreq":"كلمة المرور مطلوبه",
+	"login.rememberme":" تذكرنى",
+	"login.forgetpassword":" نسيت كلمة المرور ",
+	"login.submit":"تسجيل الدخول",
+	"forgot.loginnotfound":" إسم الدخول غير موجود يرجى التأكد منه ",
+	"forgot.createnewpassword":" إنشاء كلمة مرور جديدة" ,
+	"forgot.note":"يرجى تقديم عنوان البريد الإلكتروني أو رقم الهاتف الذي استخدمته عند التسجيل في حساب الصفقة الخاص بك.",
+	"otp.otpnumber":"كلمة المرور لمرة واحدة ",
+	"otp.enterotpnumber":"إدخل 6 أرقام ",
+	"otp.verfiy":"التحقق من كلمة المرور",
+	"newpassword.password":"كلمة مرور ",
+	"newpassword.retypepassword":"أعد كتابة كلمة المرور",
+	"newpassword.enterpassword":"اكتب 6 أحرف على الأقل و 20 حرفًا كحد أقصى",
+	"newpassword.required":"كلمة المرور مطلوبة",
+	"newpassword.min":"يجب كتابة كلمة المرور 6 أحرف على الأقل",
+	"newpassword.max":"يجب كتابة كلمة المرور 20 حرف كحد أقصى",
+	"newpassword.notmatch":"كلمتين المرور غير متطابقتين",
+	"newpassword.createnewpassword":"إنشاء كلمة مرور جديدة",
+
+	"_comment":" واجهة الصنف ",
+	"product.name":" إسم الصنف",
+	"product.placeholername":"إكتب إسم الصنف ",
+	"product.namereq":"إسم الصنف مطلوب ",
+	"product.nameduplicate":"اسم المنتج مكرر",
+	"product.descr":" وصف الصنف ",
+	"product.firstunit":"تفعيل الوحدة الأولى",
+	"product.firstunitname":"إسم الوحدة الأولى",
+	"product.firstprice":"سعر الوحدة الأولى",
+	"product.secondunit":"تفعيل الوحدة الثانية",
+	"product.secondunitname":"إسم الوحدة الثانية",
+	"product.secondprice":"سعر الوحدة الثانية",
+	"product.image":"صورة الصنف",
+	"product.category":" الفئة",
+	"product.registerproduct":" تسجيل الصنف ",
+
+	"_comment":" واجهة الفئات ",
+	"category.name":"إسم الفئة",
+	"category.placeholdername":" أكتب إسم الفئة",
+	"category.descr":"وصف الفئة",
+	"category.image":"صورة الفئة",
+	"category.account_type":"نوع الحساب"
+
 }
