--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,9 @@
 {
 	"app.title":"DEAL",
+	"app.search":" Search ",
+	"app.cancel":"Cancel",
+	"app.newitem":"New",
+	"app.product":" Product ",
 
 	"_comment": "Translate Languages",
 	"lang.english":"English",
@@ -87,6 +91,15 @@
 	"category.image":"Category image",
 	"category.account_type":" Account Type",
 	"category.buttonsubmit":"  Registration category ",
-	"category.toastsave":"The category has been registered successfully... awaiting as documentation"
+	"category.toastsave":"The category has been registered successfully... awaiting as documentation",
+
+	"accountproduct.addnotallow":"The product has been added before, does not allow for duplication",
+	"accountproduct.productaddedtemporary":"this product has been added temporarily until its prices are modified",
+	"accountproduct.accountproductmenu":" My Products",
+
+	"single_selection_searchbox.additem":" Add ",
+	"single_selection_searchbox.selectitem":" Selection  ",
+	"single_selection_searchbox.cancel":" Cancel "
+
 
 }
