--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -7,6 +7,10 @@
 	"app.selectDate":" إختيار ",
 	"app.cancelDate":" إلغاء ",
 
+	"app_menu.main":"الرئيسية",
+	"app_menu.shopping_cart":" العربه",
+	"app_menu.suppliers":" الموردين ",
+	"app_menu.offers":" العروض ",
 
 	"lang.english":"إنجليزى",
 	"lang.arabic":"عربى",
@@ -47,6 +51,13 @@
 	"register.enterpassword":" إدخل كلمة المرور",
 	"register.password":"كلمة المرور",
 	"register.passwordreq":"كلمة المرور مطلوبه",
+	"register.min_limit_req":" الحد الأدنى للطبية",
+	"register.min_limit_count":" الحد الآدنى لعدد الأصناف",
+	"register.delivery_period":" مدة التوصيل",
+	"register.weekend":"العطلة الأسبوعية",
+	"register.work_hours":"مواعيد العمل",
+	"register.currency":"العملة",
+	"register.toastsave":"تم تحديث بيانات الحساب",
 	"login.rememberme":" تذكرنى",
 	"login.forgetpassword":" نسيت كلمة المرور ",
 	"login.submit":"تسجيل الدخول",
@@ -73,6 +84,7 @@
 	"product.firstunit":"تفعيل الوحدة الأولى",
 	"product.firstunitname":"إسم الوحدة الأولى",
 	"product.firstprice":"سعر الوحدة الأولى",
+	"product.unitcount":" العدد داخل الوحدة",
 	"product.secondunit":"تفعيل الوحدة الثانية",
 	"product.secondunitname":"إسم الوحدة الثانية",
 	"product.secondprice":"سعر الوحدة الثانية",
@@ -81,6 +93,7 @@
 	"product.registerproduct":" تسجيل الصنف ",
 	"product.toastsave":"تم تسجيل الصنف بنجاح ... فى إنتظار التوثيق",
 
+	"group.menuname":" قائمة الأصناف",
 	"group.name":"إسم المجموعة ",
 	"group.placeholdername":" أكتب إسم المجموعه",
 	"group.namereq":" إسم المجموعه مطلوب",
