--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -6,11 +6,15 @@
 	"app.product":" المنتج",
 	"app.selectDate":" إختيار ",
 	"app.cancelDate":" إلغاء ",
+	"app.show_more":" عرض المزيد ... ",
+	"app.select_all":" الكل ",
 
 	"app_menu.main":"الرئيسية",
 	"app_menu.shopping_cart":" العربه",
 	"app_menu.suppliers":" الموردين ",
 	"app_menu.offers":" العروض ",
+	"app_menu.list_groups":" قائمة المجموعات ",
+	"app_menu.group_details":" تفاصيل المجموعه ",
 
 	"lang.english":"إنجليزى",
 	"lang.arabic":"عربى",
@@ -36,6 +40,10 @@
 	"register.placeholderlogin":"يمكنك إدخال بريد إليكترونى أو رقم هاتف",
 	"register.loginreq":"إسم تسجيل الدخول مطلوب",
 	"register.loginreqpattern":"بريد اليكترونى أو رقم هاتف غير صالح ",
+	"register.phone":"رقم الهاتف",
+	"register.placeholderphone":"  رقم الهاتف",
+	"register.phonereq":" رقم الهاتف مطلوب",
+	"register.phonereqpattern":" رقم الهاتف غير صالح",
 	"register.loginduplicate":"إسم تسجيل الدخول موجود بالفعل",
 	"register.firstname":"الإسم الأول",
 	"register.enterfirstname":" إدخل الإسم الأول",
