--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,8 @@
 	"app_menu.list_groups":" Groups  ",
 	"app_menu.group_details":" Group Details",
 	"app_menu.product_list":" My Products List ",
+	"app_menu.orders_incoming":" Incoming Orders ",
+	"app_menu.orders_outcoming":" Outcoming Orders ",
 
 
 
